Separated json and slick models

--- a/Sales/src/main/resources/application.conf
+++ b/Sales/src/main/resources/application.conf
@@ -1,5 +1,12 @@
 h2mem1 = {
-  url = "jdbc:h2:mem:test1"
+  url = "jdbc:h2:mem:testProduct"
+  driver = org.h2.Driver
+  connectionPool = disabled
+  keepAliveConnection = true
+}
+
+h2mem2 = {
+  url = "jdbc:h2:mem:testSaleItem"
   driver = org.h2.Driver
   connectionPool = disabled
   keepAliveConnection = true
