Adding test classes for other model items, not yet implemented

--- a/Sales/src/main/resources/application.conf
+++ b/Sales/src/main/resources/application.conf
@@ -11,3 +11,17 @@ h2mem2 = {
   connectionPool = disabled
   keepAliveConnection = true
 }
+
+h2mem3 = {
+  url = "jdbc:h2:mem:testSale"
+  driver = org.h2.Driver
+  connectionPool = disabled
+  keepAliveConnection = true
+}
+
+h2mem4 = {
+  url = "jdbc:h2:mem:testSalesDay"
+  driver = org.h2.Driver
+  connectionPool = disabled
+  keepAliveConnection = true
+}
